# todolist

./: .env  .env.example  .gitignore  README.md  alembic.ini  exceptions.py  main.py  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 370285b3fb66_initial_models.py  e8d1f419f3e5_create_project_and_task_table.py
app/: main.py
app/api/: routers.py
app/api/controller_schemas/requests/: project_schemas.py  task_schemas.py
app/api/controller_schemas/responses/: project_schemas.py  task_schemas.py
app/api/controllers/: projects_controller.py  tasks_controller.py
app/cli/: console.py
app/commands/: autoclose_overdue.py  scheduler.py
app/core/: config.py
app/db/: base.py  session.py
app/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
app/models/: __init__.py  project.py  task.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/services/: __init__.py  base_service.py  project_service.py  task_service.py
src/todolist/: cli.py  config.py  exceptions.py  models.py  services.py  storage.py
