[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "A Python ToDoList application"
authors = ["Rose <rose729729@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = ">=1.1.1,<2.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
psycopg = {extras = ["binary"], version = "^3.3.2"}
psycopg2-binary = "^2.9.11"
psycopg2 = {extras = ["binary"], version = "^2.9.11"}
django-scheduler = "^0.10.1"
apscheduler = "^3.11.1"
fastapi = "^0.126.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
pytest = "^8.0.0"
alembic = "^1.17.2"

[tool.poetry.scripts]
todolist = "app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"